web/css/win.css
/* ... */
.DropDown li {
  margin: 2px;
  list-style-type:none
}

/* Set display block and position relative so clicks on list items activate links  */
.menu a, div.eventsSummary a {
  cursor:default;
  background-color:transparent;
  display:block; position:relative;
  text-decoration:none
  }

.menu a:link { color:#33b }
.menu a:visited { color:#339 }
.menu a:hover { color:#fff; background-color:#338 }

/* These are the styles for the link popups */
a.ListCellPopup1 {
  position: relative;
  z-index:24;
  color: #000;
  text-decoration:underline;
  font-weight:normal;
}

a.ListCellPopup1:hover { z-index:25; }
a.ListCellPopup1 span{ display: none }
a.ListCellPopup1:hover span {
  display:block;
  position:absolute;
  top:0.2em; left:-19em; width:40em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

a.ListCellPopup2{
  position: relative;
  z-index:24;
  color: #000;
  text-decoration:underline;
  font-weight:normal;
}

a.ListCellPopup2:hover { z-index:25; }
a.ListCellPopup2 span { display: none }
a.ListCellPopup2:hover span {
  display:block;
  position:absolute;
  top:0.2em;left:-13em;width:48em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

/* For popups that are also real links, so the color gets set correctly */
a.ListCellPopup3:link {
  position: relative;
  z-index:24;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3:visited {
  position: relative;
  z-index:24;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3:hover, span.SpanPopup1:hover {
  position: relative;
  z-index:25;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3 span { display: none }
a.ListCellPopup3:hover span {
  display:block;
  position:absolute;
  top:0.2em;left:-19em;width:40em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

/* For popups that are also real links, so the color gets set correctly */
a.ListCellPopup4:link, a.ListCellPopup5:link {
  z-index:24;
  color: #000000;
  text-decoration:none;
  font-weight:normal;
}

a.ListCellPopup4:visited, a.ListCellPopup5:visited {
  z-index:24;
  color: #000000;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup4:hover, a.ListCellPopup5:hover {
  position: relative;
  z-index:25;
}

a.ListCellPopup4 span, a.ListCellPopup5 span, span.SpanPopup1 span {
  display: none
}
a.ListCellPopup4:hover span, a.ListCellPopup5:hover span, span.SpanPopup1:hover span {
  display:block;
  position:absolute;
  top: -.3em;
  left: -.3em;
  width: 60em;
  padding: 2px;
  border: 1px solid;
  border-color: #000000;
  background-color:#E6E6E6;
  color:#000;
  text-align: left
}

a.ListCellPopup5:link {font-size: 11px; color: #666666; line-height: 14px;}

a.ListCellPopup5:visited {font-size: 11px; color: #666666; line-height: 14px;}

a.ListCellPopup5:hover span {
  width: 30em;
  height: auto;
}

span.SpanPopup1:link {
  z-index: 24;
  color: #003399;
  text-decoration: none;
  font-weight:bold;
}

span.SpanPopup1:visited {
  z-index: 24;
  color: #003399;
  text-decoration: none;
  font-weight: bold;
}

span.SpanPopup1:hover {
  text-decoration: none;
}

span.SpanPopup1:hover span {
  top: 1em;
  left: 0.7em;
  width: auto;
  height: auto;
}

div.overlay {
  position: absolute;
  visibility: hidden;
  width:9px; height:0px;
  left:0; top:200px;
  font-size:10px;
  background-color: #777777; color:#000;
  border: 0px;
  z-index: 200;
  opacity: 0.3;
  filter:alpha(opacity=30); -moz-opacity:0.3;
}

/* .99 opacity is for safari bug */
div.timepopup {
  position:absolute;
  visibility:hidden;
  width:70px;
  left:0; top:-20px;
  font-size:10px;
  padding: 3px;
  text-align: center;
  background-color: #e6e6e6; color:#000;
  border: 1px solid;
  z-index: 210;
  opacity: 0.99;
}

div.scrollable {
  top: 100px;
  left: 400px;
  width: auto;
  height: 165px;
  margin-right: -6px;
  overflow: auto;
}

div.eventDetails {
  position: absolute;
  width: 672px;
  background-color: #CCE0FF;
  margin-top: 2px;
  border: 1px solid;
  font-size:10px;
  opacity: 0.99;
}

div.eventsSummary {
  position: relative;
  height: 200px;
  overflow: auto;
  padding: 6px;
  z-index: 500;
}

td.eventsTab, td.eventsTabOn {
  text-align: center;
  border-right: solid;
  border-bottom: solid;
  border-width: 1px;
  border-color: #000000;
  padding-left: 2px;
  padding-right: 2px;
}

td.eventsTabOn {
  border-bottom: none;
}

.red, .redTableCell {
  color: #990000;
}

A.red:link {color: #990000; text-decoration: none; font-weight: bold;}
A.red:visited {color: #990000; text-decoration: none; font-weight: bold;}
A.red:hover {color: #FF0000; text-decoration: none; font-weight: bold;}

.green {
  color: #009900;
}

A.green:link {color: #009900; text-decoration: none; font-weight: bold;}
A.green:visited {color: #009900; text-decoration: none; font-weight: bold;}
A.green:hover {color: #00CC00; text-decoration: none; font-weight: bold;}

.yellow {
  color: #BAA301;
}

A.yellow:link {color: #BAA301; text-decoration: none; font-weight: bold;}
A.yellow:visited {color: #BAA301; text-decoration: none; font-weight: bold;}
A.yellow:hover {color: #D1B801; text-decoration: none; font-weight: bold;}

.navy {
  color: #000080;
}

A.navy:link {color: #000080; text-decoration: none; font-weight: bold;}
A.navy:visited {color: #000080; text-decoration: none; font-weight: bold;}
A.navy:hover {color: #0000FF; text-decoration: none; font-weight: bold;}

.black {
  color: black;
}

A.black:link {color: black; text-decoration: none; font-weight: bold;}
A.black:visited {color: black; text-decoration: none; font-weight: bold;}
A.black:hover {color: grey; text-decoration: none; font-weight: bold;}

BODY {z-index: 0;}
/* ... */

